Feat: エネミープリセット機能の実装 (保存・読込UI追加)

--- a/static/3_battlefield.html
+++ b/static/3_battlefield.html
@@ -113,12 +113,14 @@
             </div>
 
         <div class="chat-controls">
-            <textarea id="chat-input" placeholder="チャットまたは /roll コマンド (例: 2d6+5)" rows="2"></textarea>
+            <textarea id="chat-input" placeholder="チャットまたは /roll コマンド" rows="2"></textarea>
             <button id="chat-send-btn">送信</button>
         </div>
 
         <div class="room-actions">
             <button id="save-state-btn" class="room-action-btn">セーブ</button>
+
+            <button id="preset-manager-btn" class="room-action-btn" style="background-color: #17a2b8;">敵プリセット</button>
             <button id="reset-btn" class="room-action-btn danger">リセット</button>
             <button id="leave-room-btn" class="room-action-btn secondary">ルーム一覧に戻る</button>
         </div>
@@ -126,3 +128,4 @@
     </div>
 
 </div>
+
