Implement complete wide-area battle system (UI, Logic, and Counter damage)

--- a/static/3_battlefield.html
+++ b/static/3_battlefield.html
@@ -72,7 +72,19 @@
 
                 <div id="skill-preview-attacker" class="skill-preview-box" style="display: none;">
                     </div>
-            </div>
+
+                <div id="wide-area-container" style="display: none; margin-top: 10px; border-top: 1px solid #ccc; padding-top: 10px;">
+                    <h4 style="margin: 0 0 5px 0; color: #d63384;">広域攻撃モード</h4>
+                    <div style="font-size: 0.9em; margin-bottom: 5px;">
+                        モード: <span id="wide-area-mode-display" style="font-weight: bold;">---</span>
+                    </div>
+                    <div id="wide-defenders-list" style="display: flex; flex-direction: column; gap: 5px; max-height: 200px; overflow-y: auto;">
+                        </div>
+                    <button id="execute-wide-action-btn" class="action-btn" style="width: 100%; margin-top: 10px; background-color: #d63384; color: white;">
+                        広域攻撃 実行
+                    </button>
+                </div>
+                </div>
 
             <div class="action-stack" id="action-column-defender">
                 <h3>対応側</h3>
@@ -117,7 +129,7 @@
             <div class="log-area" id="log-area">
                 <p class="log-line info">戦闘ログを読み込み中...</p>
             </div>
-        </div>
+            </div>
 
         <div class="chat-controls">
             <textarea id="chat-input" placeholder="チャットまたは /roll コマンド" rows="2"></textarea>
@@ -135,4 +147,3 @@
     </div>
 
 </div>
-
