refactor: バフ・デバフ定義をbuff_data.jsに分離し、参照ロジックを修正

--- a/static/index.html
+++ b/static/index.html
@@ -71,6 +71,7 @@
 
     </div>
 
+    <script src="js/buff_data.js"></script>
     <script src="js/main.js"></script>
     <script src="js/modals.js"></script>
     <script src="js/tab_skill_search.js"></script>
