ビジュアルバトルフィールドの実装

--- a/static/index.html
+++ b/static/index.html
@@ -63,7 +63,8 @@
         </header>
 
         <div class="tab-container">
-            <button class="tab-button" data-tab="tab-battlefield">バトルフィールド</button>
+            <button class="tab-button" data-tab="tab-battlefield">テキストバトルフィールド</button>
+            <button class="tab-button" data-tab="visual">ビジュアルバトルフィールド</button>
         </div>
 
         <div id="main-content">
@@ -77,5 +78,6 @@
     <script src="js/tab_skill_search.js"></script>
     <script src="js/tab_battlefield.js"></script>
     <script src="js/user_management.js"></script>
+    <script src="js/tab_visual_battle.js"></script>
 </body>
 </html>
