デバフ等UIの調整

--- a/static/4_visual_battle.html
+++ b/static/4_visual_battle.html
@@ -33,11 +33,7 @@
 
         <div id="visual-chat-area">
             <div id="visual-chat-log" class="battle-log"></div>
-            <div class="chat-input-container">
-                <textarea id="visual-chat-input" placeholder="Chat / Dice (e.g. 2d6+3)"></textarea>
-                <button id="visual-chat-send-btn" class="action-btn">Send</button>
             </div>
-        </div>
     </div>
 </div>
 
@@ -103,3 +99,5 @@
         </div>
     </div>
 </div>
+
+<script src="/static/js/buff_data.js"></script>
