--- a/static/4_visual_battle.html
+++ b/static/4_visual_battle.html
@@ -27,8 +27,7 @@
 
         <div id="visual-staging-area" style="flex: 0 0 auto; max-height: 15%; border-bottom: 1px solid #ccc; display: flex; flex-direction: column;">
             <h4 class="sidebar-header">Staging (未配置)</h4>
-            <div id="staging-list" style="overflow-y: auto; flex: 1;">
-                </div>
+            <div id="staging-list" style="overflow-y: auto; flex: 1;"></div>
         </div>
 
         <div id="visual-controls-area" style="padding: 10px; background: #f8f9fa; border-bottom: 1px solid #ddd;">
@@ -52,7 +51,7 @@
                 </div>
 
             <div style="display: flex; border-top: 1px solid #ccc;">
-                <input type="text" id="visual-chat-input" placeholder="チャット /roll..." style="flex: 1; border: none; padding: 8px;">
+                <input type="text" id="visual-chat-input" placeholder="チャットまたは /roll コマンド" style="flex: 1; border: none; padding: 8px;">
                 <button id="visual-chat-send" style="border: none; background: #007bff; color: white; padding: 0 15px; cursor: pointer; font-weight: bold;">Send</button>
             </div>
         </div>
@@ -74,17 +73,14 @@
             <div class="duel-side attacker" id="duel-side-attacker">
                 <h4 class="side-title">Attacker (攻)</h4>
                 <div class="duel-char-name" id="duel-attacker-name">Character A</div>
-
                 <div class="duel-form-group">
                     <label>Skill:</label>
                     <select id="duel-attacker-skill" class="duel-select"></select>
                 </div>
-
                 <div class="duel-control-btns">
                     <button id="duel-attacker-calc-btn" class="duel-btn calc">Calculate</button>
                     <button id="duel-attacker-declare-btn" class="duel-btn declare" disabled>Declare</button>
                 </div>
-
                 <div class="duel-preview-area" id="duel-attacker-preview">
                     <div class="preview-command">---</div>
                     <div class="preview-damage">---</div>
@@ -99,23 +95,19 @@
             <div class="duel-side defender" id="duel-side-defender">
                 <h4 class="side-title">Defender (防)</h4>
                 <div class="duel-char-name" id="duel-defender-name">Character B</div>
-
                 <div id="duel-defender-controls">
                     <div class="duel-form-group">
                         <label>Skill:</label>
                         <select id="duel-defender-skill" class="duel-select"></select>
                     </div>
-
                     <div class="duel-control-btns">
                         <button id="duel-defender-calc-btn" class="duel-btn calc">Calculate</button>
                         <button id="duel-defender-declare-btn" class="duel-btn declare" disabled>Declare</button>
                     </div>
                 </div>
-
                 <div id="duel-defender-lock-msg" style="display: none; color: #ff6b6b; font-weight: bold; margin: 20px 0;">
                     ⚠ 行動済みのため防御不可<br>(一方攻撃)
                 </div>
-
                 <div class="duel-preview-area" id="duel-defender-preview">
                     <div class="preview-command">---</div>
                     <div class="preview-damage">---</div>
