広域マッチの実装（テキストバトルフィールドに不具合あり）

--- a/static/4_visual_battle.html
+++ b/static/4_visual_battle.html
@@ -27,7 +27,8 @@
 
         <div id="visual-staging-area" style="flex: 0 0 auto; max-height: 15%; border-bottom: 1px solid #ccc; display: flex; flex-direction: column;">
             <h4 class="sidebar-header">Staging (未配置)</h4>
-            <div id="staging-list" style="overflow-y: auto; flex: 1;"></div>
+            <div id="staging-list" style="overflow-y: auto; flex: 1;">
+                </div>
         </div>
 
         <div id="visual-controls-area" style="padding: 10px; background: #f8f9fa; border-bottom: 1px solid #ddd;">
@@ -38,7 +39,7 @@
             <button id="visual-next-turn-btn" style="width: 100%; padding: 10px; background-color: #28a745; color: white; border: none; border-radius: 4px; font-weight: bold; cursor: pointer;">
                 ターン終了 (Next Turn)
             </button>
-        </div>
+            </div>
 
         <div id="visual-chat-area" style="flex: 1; display: flex; flex-direction: column; min-height: 0;">
             <div class="log-header" style="padding: 5px; background: #eee; border-bottom: 1px solid #ddd; display: flex; gap: 5px;">
