--- a/static/index.html
+++ b/static/index.html
@@ -72,12 +72,14 @@
 
     </div>
 
+<!-- JavaScriptファイルの読み込み（依存関係順） -->
     <script src="js/buff_data.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/modals.js"></script>
-    <script src="js/tab_skill_search.js"></script>
-    <script src="js/tab_battlefield.js"></script>
-    <script src="js/user_management.js"></script>
+    <script src="js/action_dock.js"></script>
     <script src="js/tab_visual_battle.js"></script>
+    <script src="js/tab_battlefield.js"></script>
+    <script src="js/tab_skill_search.js"></script>
+    <script src="js/modals.js"></script>
+    <script src="js/user_management.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
