CSSのリファクタリングと状態異常アイコンの描画修正

--- a/static/4_visual_battle.html
+++ b/static/4_visual_battle.html
@@ -153,6 +153,6 @@
     </div>
 </div>
 
-<!-- ★ アクションドック用のCSS読み込み（JSはmain.jsで読み込み済み） ★ -->
-<link rel="stylesheet" href="css/visual_battle_layout.css">
-<link rel="stylesheet" href="css/action_dock.css">
+<!-- ★ アクションドック用のCSS読み込み（JSはmain.jsで読み込み済み。CSSはstyles.css統合済み） ★ -->
+<!-- <link rel="stylesheet" href="css/visual_battle_layout.css"> -->
+<!-- <link rel="stylesheet" href="css/action_dock.css"> -->
